syntax = "proto3";

package grpc.qhat.user;

import "grpc/qhat/user/message.proto";

service UnauthorizedUserService {
  rpc create(CreateRequest) returns (CreateResponse) {}
}

service UserService {
  rpc read(ReadRequest) returns (ReadResponse) {}
}